# wintermute

./: .dockerignore  .gitignore  ANALYSIS_ruvltra_wintermute.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  DOCKER-OPTIMIZED.de.md  DOCKER-OPTIMIZED.md  Dockerfile.production  PLAN_REFLECTION_CYCLE.md  PLAN_WEAK_MODEL_RESILIENCE.md  PLAN_sub_sessions.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  TWO_STAGE_PIPE_PLAN.md  build-optimized.sh  config.yaml.example  database.py  docker-compose.yml  docker-entrypoint.sh  heartbeat.py  llm_thread.py  main.py  matrix_thread.py  migrate.sh  onboarding.sh  pyproject.toml  requirements.txt  scheduler_thread.py  setup.sh  tools.py  web_interface.py
.github/: dependabot.yml
data/: BASE_PROMPT.txt  COMPACTION_PROMPT.txt  DREAM_MEMORIES_PROMPT.txt  DREAM_PULSE_PROMPT.txt  HEARTBEATS.txt  MEMORIES.txt  PULSE.txt  SUPERVISOR_PROMPTS.txt  TURING_PROTOCOL_HOOKS.txt
docs/: README.md  architecture.md  autonomy.md  best-practices.md  commands.md  configuration.md  convergence-protocol.md  credential-redaction.md  installation.md  lite-mode.md  matrix-setup.md  outcome-tracking.md  refactor-strategy.md  signal-setup.md  skills-storage.md  small-llm-analysis.md  system-prompts.md  tool-disclosure.md  tools.md  turing-protocol.md  web-interface.md
ganglion/: __init__.py  database.py  dreaming.py  heartbeat.py  llm_thread.py  main.py  matrix_thread.py  prompt_assembler.py  pulse.py  scheduler_thread.py  sub_session.py  tools.py  web_interface.py
wintermute/: __init__.py  agenda.py  database.py  dreaming.py  gemini_auth.py  gemini_client.py  kimi_auth.py  kimi_client.py  llm_thread.py  main.py  matrix_thread.py  memory_harvest.py  nl_translator.py  onboarding.py  prompt_assembler.py  prompt_loader.py  pulse.py  scheduler_thread.py  sub_session.py  supervisor.py  tools.py  turing_protocol.py  (+2 more)
(+102 files in other folders)
