[project]
name = "ganglion"
version = "0.1.0"
description = "A multi-interface personal AI assistant with persistent memory, reminders, and tool-calling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matrix-nio[e2e]>=0.25.2",
    "openai>=2.20.0",
    "tiktoken>=0.12.0",
    "aiohttp>=3.13.3",
    "apscheduler>=3.11.2",
    "pyyaml>=6.0.3",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
ganglion = "ganglion.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ganglion"]

