[project]
name = "wintermute"
version = "0.3.0-alpha"
description = "A multi-interface personal AI assistant with persistent memory, routines, and tool-calling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mautrix[encryption]>=0.21.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "openai>=2.20.0",
    "tiktoken>=0.12.0",
    "aiohttp>=3.13.3",
    "apscheduler>=3.11.2",
    "pyyaml>=6.0.3",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.46",
    "httpx>=0.27.0",
    "anthropic>=0.42.0",
    "numpy>=1.26.0",
    "qdrant-client>=1.13.0",
]

[project.scripts]
wintermute = "wintermute.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.hatch.build.targets.wheel]
packages = ["wintermute"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["wintermute"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

